small error fix

--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
@@ -128,7 +128,7 @@ In the remainder of the introduction, I review causal directed acyclic graphs (c
 
 [Part 4](#id-sec-4) uses Single World Intervention Graphs (SWIGs) to enhance understanding of measurement-error bias, which is not easily conveyed through causal directed acyclic graphs (DAGs). Causal DAGs are designed to evaluate assumptions of 'no unmeasured confounding'. Consequently, they do not fully elucidate population-restriction and measurement-error biases that do not stem from confounding. Although SWIGs are also built to evaluate 'no unmeasured confounding', they represent counterfactual dependencies directly on a graph. By placing the measurements—or 'reporters'—of latent realities we aim to quantify, along with the variables that perturb these reporters so that the reported quantities differ from the latent realities, we can advance the structural understanding of measurement problems. This approach better diagnoses threats to comparative human science and elucidates their remedies.
 
-The importance of causal inference for comparative research has been highlighted in several recent studies [@deffner2022; @bulbulia2022]. In this paper, I focus on challenges arising from structural features of (1) measurement error bias, (2) target population restriction bias from censoring, and (3) target population restriction bias at a study's baseline. I clarify that the basis of these biases is causal, not statistical, by demonstrating their roots in measurement error bias. This understanding is essential because comparative researchers often rely on statistical methods, such as configurable scalar and metric invariance, to address measurement issues. However, if the problems are causal, such methods are inadequate. They fail to clarify the dependencies between reality, its measurements, and the contextual and cultural features that modify the effects of reality on its measurements [@vanderweele2022; @vanderweele2022a; @vanderweele2022b]. 
+The importance of causal inference for comparative research has been highlighted in several recent studies [@deffner2022; @bulbulia2022]. Here, I focus on challenges arising from structural features of (1) measurement error bias, (2) target population restriction bias from censoring, and (3) target population restriction bias at a study's baseline. I clarify that the basis of these biases is causal, not statistical, by demonstrating their roots in measurement error bias. This understanding is essential because comparative researchers often rely on statistical methods, such as configurable scalar and metric invariance, to address measurement issues. However, if the problems are causal, such methods are inadequate. They fail to clarify the dependencies between reality, its measurements, and the contextual and cultural features that modify the effects of reality on its measurements [@vanderweele2022; @vanderweele2022a]. 
 
 
 I begin with a brief overview of causal inference, causal directed acyclic graphs (causal DAGs), and our terminology.
