--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
@@ -428,21 +428,20 @@ comparative human science and elucidates their remedies.
 The importance of causal inference for comparative research has been
 highlighted in several recent studies
 (\citeproc{ref-bulbulia2022}{Bulbulia 2022};
-\citeproc{ref-deffner2022}{Deffner \emph{et al.} 2022}). In this paper,
-I focus on challenges arising from structural features of (1)
-measurement error bias, (2) target population restriction bias from
-censoring, and (3) target population restriction bias at a study's
-baseline. I clarify that the basis of these biases is causal, not
-statistical, by demonstrating their roots in measurement error bias.
-This understanding is essential because comparative researchers often
-rely on statistical methods, such as configurable scalar and metric
-invariance, to address measurement issues. However, if the problems are
-causal, such methods are inadequate. They fail to clarify the
-dependencies between reality, its measurements, and the contextual and
-cultural features that modify the effects of reality on its measurements
+\citeproc{ref-deffner2022}{Deffner \emph{et al.} 2022}). Here, I focus
+on challenges arising from structural features of (1) measurement error
+bias, (2) target population restriction bias from censoring, and (3)
+target population restriction bias at a study's baseline. I clarify that
+the basis of these biases is causal, not statistical, by demonstrating
+their roots in measurement error bias. This understanding is essential
+because comparative researchers often rely on statistical methods, such
+as configurable scalar and metric invariance, to address measurement
+issues. However, if the problems are causal, such methods are
+inadequate. They fail to clarify the dependencies between reality, its
+measurements, and the contextual and cultural features that modify the
+effects of reality on its measurements
 (\citeproc{ref-vanderweele2022}{VanderWeele 2022a},
-\citeproc{ref-vanderweele2022a}{2022b};
-\citeproc{ref-vanderweele2022b}{VanderWeele and Vansteelandt 2022}).
+\citeproc{ref-vanderweele2022a}{2022b}).
 
 I begin with a brief overview of causal inference, causal directed
 acyclic graphs (causal DAGs), and our terminology.
@@ -2611,12 +2610,6 @@ VanderWeele, TJ, and Robins, JM (2007) Four types of effect
 modification: a classification based on directed acyclic graphs.
 \emph{Epidemiology (Cambridge, Mass.)}, \textbf{18}(5), 561--568.
 doi:\href{https://doi.org/10.1097/EDE.0b013e318127181b}{10.1097/EDE.0b013e318127181b}.
-
-\bibitem[\citeproctext]{ref-vanderweele2022b}
-VanderWeele, TJ, and Vansteelandt, S (2022) A statistical test to reject
-the structural interpretation of a latent factor model. \emph{Journal of
-the Royal Statistical Society Series B: Statistical Methodology},
-\textbf{84}(5), 2032--2054.
 
 \bibitem[\citeproctext]{ref-vansteelandt2022}
 Vansteelandt, S, and Dukes, O (2022b) Assumption-lean inference for
